2009-02-12 Carsten Magass <magass -at- physik.rwth-aachen.de>
	* new cvs directory
        * starting version, v1.0